# 2024x_WorkbenchV2

./: .gitignore  CACHE_API.md  LICENSE  README.md  launch.ps1  launch.sh  unblock-ps1.ps1
Presentation/: TWC_WorkbenchV2_How_It_Works.pptx  TWC_WorkbenchV2_Presentation_Speech.txt
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  teamwork.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  cache.py  jobs.py  servers.py  workspace.py
backend/app/auth/: oauth.py  twc.py
backend/app/core/: __init__.py  pdf.py  storage.py
backend/app/extractors/: __init__.py  twc_artifact_extractor.py
backend/app/integrations/: publisher.py
backend/app/jobs/: __init__.py  coordinator.py
backend/app/models/: domain.py
backend/app/security/: __init__.py  session.py
backend/app/services/: platform.py  swagger_contract.py  three_ds_corpus.py
backend/app/settings/: __init__.py  config.py  logging.py
backend/ops/: README.md  live_twc_smoke.py  multi_worker_restart_check.py  verify_database_backup.py
backend/tests/: test_agent_knowledge.py  test_auth_source_truth.py  test_fallback_cache.py  test_group_permission_scopes.py  test_permission_snapshot.py  test_three_ds_corpus.py
contracts/: RealSwagger.json  manual.json
docs/: TWC_2024X_AUTHENTICATION_EVIDENCE.md  TWC_2024X_FULL_PACKAGE_COMPLIANCE_AUDIT.md
examples/: .gitignore  00_auth_and_current_user.py  01_version.py  02_workspaces_list.py  03_resources_list.py  04_workspace_resources_list.py  05_resource_detail.py  README.md  (+37 more)
(+115 files in other folders)
